--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Movie.es</title>
     <link rel="stylesheet" href="css/estilos.css">
     <link rel="stylesheet" href="css/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 
